--- a/toystory_AI/Dockerfile
+++ b/toystory_AI/Dockerfile
@@ -1,9 +1,19 @@
-FROM python:3.9.19
+FROM nvidia/cuda:12.1.0-cudnn8-runtime-ubuntu20.04
+
+ENV TZ=Asia/Seoul
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3 \
+    python3-pip \
+    python3-dev \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+COPY requirements.txt .
+RUN pip3 install --no-cache-dir -r requirements.txt
 
 COPY . .
-
-RUN apt-get update
-
-RUN pip install -r requirements.txt
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
