--- a/toystory_AI/requirements.txt
+++ b/toystory_AI/requirements.txt
@@ -10,15 +10,17 @@ anyio==4.4.0
 aspose-3d==24.7.0
 async-timeout==4.0.3
 attrs==24.2.0
-boto3  # Removed specific version constraint
-botocore  # Removed specific version constraint
+boto3==1.35.3
+botocore==1.35.3
 certifi==2022.12.7
 charset-normalizer==2.1.1
 click==8.1.7
 coloredlogs==15.0.1
 contourpy==1.2.1
 cycler==0.12.1
+dataclasses-json==0.6.7
 datasets==2.14.7
+Deprecated==1.2.14
 dill==0.3.7
 distro==1.9.0
 einops==0.7.0
@@ -32,8 +34,8 @@ frozenlist==1.4.1
 fsspec==2023.10.0
 glcontext==2.5.0
 GPUtil==1.4.0
-gradio  # Removed specific version constraint
-gradio_client  # Removed specific version constraint
+gradio==4.42.0
+gradio_client==1.3.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -55,12 +57,14 @@ llvmlite==0.43.0
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.22.0
 matplotlib==3.9.2
 mdurl==0.1.2
 moderngl==5.10.0
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.15
+mypy-extensions==1.0.0
 narwhals==1.4.2
 networkx==3.2.1
 numba==0.60.0
@@ -73,7 +77,8 @@ opencv-python-headless==4.10.0.84
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
-Pillow==10.1.0
+pillow==10.4.0
+pip-autoremove==0.10.0
 pipdeptree==2.23.1
 platformdirs==4.2.2
 pooch==1.8.2
@@ -84,11 +89,12 @@ pyarrow-hotfix==0.6
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydub==0.25.1
+pygltflib==1.16.2
 Pygments==2.18.0
 PyMatting==1.1.12
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.2
@@ -120,14 +126,17 @@ torchmcubes @ git+https://github.com/tatsy/torchmcubes.git@cb81cddece46a8a126b08
 torchvision==0.16.0
 tqdm==4.66.5
 transformers==4.44.0
-trimesh==4.0.5
-#triton==2.1.0
+trimesh==4.4.7
+triton==2.1.0
 typer==0.12.4
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
-# Removed urllib3 to allow pip to choose a compatible version
+#urllib3==2.2.2
+urllib3>=1.25.4,<1.27
 uvicorn==0.30.6
 websockets==11.0.3
+wrapt==1.16.0
 xatlas==0.0.9
 xxhash==3.5.0
 yarl==1.9.4
