--- a/toystory_AI/requirements.txt
+++ b/toystory_AI/requirements.txt
@@ -4,28 +4,41 @@ aiohappyeyeballs==2.3.7
 aiohttp==3.10.4
 aiosignal==1.3.1
 altair==5.4.0
+analytics-python==1.4.post1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-anyio==4.4.0
+anyio==3.7.1
 aspose-3d==24.7.0
+asttokens==2.4.1
 async-timeout==4.0.3
 attrs==24.2.0
-boto3==1.35.3
-botocore==1.35.3
+backcall==0.2.0
+backoff==1.10.0
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+build==1.2.1
 certifi==2022.12.7
+cffi==1.17.0
 charset-normalizer==2.1.1
 click==8.1.7
 coloredlogs==15.0.1
 contourpy==1.2.1
+cryptography==43.0.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 datasets==2.14.7
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 dill==0.3.7
 distro==1.9.0
+docopt==0.6.2
 einops==0.7.0
 exceptiongroup==1.2.2
+executing==2.0.1
 fastapi==0.112.1
+fastjsonschema==2.20.0
 ffmpy==0.4.0
 filelock==3.13.1
 flatbuffers==24.3.25
@@ -44,28 +57,41 @@ humanfriendly==10.0
 idna==3.4
 imageio==2.35.0
 imageio-ffmpeg==0.5.1
+importlib_metadata==8.4.0
 importlib_resources==6.4.2
+ipython==8.12.3
+jedi==0.19.1
 Jinja2==3.1.3
 jiter==0.5.0
-jmespath==1.0.1
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
 kiwisolver==1.4.5
 lazy_loader==0.4
+linkify-it-py==2.0.3
 llvmlite==0.43.0
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.1
 mdurl==0.1.2
+mistune==3.0.2
 moderngl==5.10.0
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.15
 mypy-extensions==1.0.0
 narwhals==1.4.2
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 networkx==3.2.1
 numba==0.60.0
 numpy==1.26.3
@@ -77,27 +103,42 @@ opencv-python-headless==4.10.0.84
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
+pandocfilters==1.5.1
+paramiko==3.4.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
 pillow==10.4.0
 pip-autoremove==0.10.0
+pip-tools==7.4.1
 pipdeptree==2.23.1
+pipreqs==0.5.0
 platformdirs==4.2.2
 pooch==1.8.2
+prompt_toolkit==3.0.47
 protobuf==5.27.3
 psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
 pyarrow==17.0.0
 pyarrow-hotfix==0.6
+pycparser==2.22
+pycryptodome==3.20.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydub==0.25.1
 pygltflib==1.16.2
 Pygments==2.18.0
 PyMatting==1.1.12
+PyNaCl==1.5.0
 pyparsing==3.1.2
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.2
+pyzmq==26.2.0
 referencing==0.35.1
 regex==2024.7.24
 rembg==2.0.58
@@ -105,7 +146,6 @@ requests==2.32.3
 rich==13.7.1
 rpds-py==0.20.0
 ruff==0.6.1
-s3transfer==0.10.2
 safetensors==0.4.4
 scikit-image==0.24.0
 scikit-learn==1.5.1
@@ -114,17 +154,23 @@ semantic-version==2.10.0
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
 starlette==0.38.2
 sympy==1.12
 threadpoolctl==3.5.0
 tifffile==2024.8.10
+tinycss2==1.3.0
 tokenizers==0.19.1
+tomli==2.0.1
 tomlkit==0.12.0
 torch==2.1.0
 torchaudio==2.1.0
 torchmcubes @ git+https://github.com/tatsy/torchmcubes.git@cb81cddece46a8a126b08f7fbb9742f8605eefab
 torchvision==0.16.0
+tornado==6.4.1
 tqdm==4.66.5
+traitlets==5.14.3
 transformers==4.44.0
 trimesh==4.4.7
 triton==2.1.0
@@ -132,12 +178,15 @@ typer==0.12.4
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
-#urllib3==2.2.2
-urllib3>=1.25.4,<1.27
+uc-micro-py==1.0.3
+urllib3==2.2.2
 uvicorn==0.30.6
+wcwidth==0.2.13
+webencodings==0.5.1
 websockets==11.0.3
 wrapt==1.16.0
 xatlas==0.0.9
 xxhash==3.5.0
+yarg==0.1.9
 yarl==1.9.4
 zipp==3.20.0
