--- a/toystory_AI/requirements.txt
+++ b/toystory_AI/requirements.txt
@@ -23,7 +23,8 @@ cffi==1.17.0
 charset-normalizer==2.1.1
 click==8.1.7
 coloredlogs==15.0.1
-contourpy==1.2.1
+#contourpy==1.2.1
+contourpy==1.1.1
 cryptography==43.0.0
 cycler==0.12.1
 dataclasses-json==0.6.7
