--- a/toystory_AI/requirements.txt
+++ b/toystory_AI/requirements.txt
@@ -12,36 +12,48 @@ aspose-3d==24.7.0
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==24.2.0
+audioread==3.0.1
+av==11.0.0
 backcall==0.2.0
 backoff==1.10.0
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+blis==0.7.11
 build==1.2.1
+catalogue==2.0.10
 certifi==2022.12.7
 cffi==1.17.0
 charset-normalizer==2.1.1
 click==8.1.7
+cloudpathlib==0.18.1
+cloudpickle==3.0.0
 coloredlogs==15.0.1
-#contourpy==1.2.1
-contourpy==1.1.1
+colorlog==6.8.2
+confection==0.1.5
+contourpy==1.2.1
 cryptography==43.0.0
 cycler==0.12.1
+cymem==2.0.8
 dataclasses-json==0.6.7
 datasets==2.14.7
 decorator==5.1.1
 defusedxml==0.7.1
+demucs==4.0.1
 Deprecated==1.2.14
 dill==0.3.7
 distro==1.9.0
 docopt==0.6.2
+dora_search==0.1.12
 einops==0.7.0
+encodec==0.1.1
 exceptiongroup==1.2.2
 executing==2.0.1
 fastapi==0.112.1
 fastjsonschema==2.20.0
 ffmpy==0.4.0
 filelock==3.13.1
+flashy==0.0.2
 flatbuffers==24.3.25
 fonttools==4.53.1
 frozenlist==1.4.1
@@ -55,6 +67,8 @@ httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.24.6
 humanfriendly==10.0
+hydra-colorlog==1.2.0
+hydra-core==1.3.2
 idna==3.4
 imageio==2.35.0
 imageio-ffmpeg==0.5.1
@@ -67,14 +81,21 @@ jiter==0.5.0
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+julius==0.2.7
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 kiwisolver==1.4.5
+lameenc==1.7.0
+langcodes==3.4.0
+language_data==1.2.0
 lazy_loader==0.4
+librosa==0.10.2.post1
+lightning-utilities==0.11.6
 linkify-it-py==2.0.3
 llvmlite==0.43.0
 loguru==0.7.2
+marisa-trie==1.2.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
@@ -86,36 +107,44 @@ mistune==3.0.2
 moderngl==5.10.0
 monotonic==1.6
 mpmath==1.3.0
+msgpack==1.0.8
 multidict==6.0.5
 multiprocess==0.70.15
+murmurhash==1.0.10
 mypy-extensions==1.0.0
 narwhals==1.4.2
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
 networkx==3.2.1
+num2words==0.5.13
 numba==0.60.0
 numpy==1.26.3
+numpy-stl==3.1.2
 objaverse==0.1.7
 omegaconf==2.3.0
 onnxruntime==1.19.0
 openai==1.42.0
 opencv-python-headless==4.10.0.84
+openunmix==1.3.0
 orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 paramiko==3.4.1
 parso==0.8.4
+pesq==0.0.4
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==10.4.0
 pip-autoremove==0.10.0
+pip-chill==1.0.3
 pip-tools==7.4.1
 pipdeptree==2.23.1
 pipreqs==0.5.0
 platformdirs==4.2.2
 pooch==1.8.2
+preshed==3.0.9
 prompt_toolkit==3.0.47
 protobuf==5.27.3
 psutil==6.0.0
@@ -134,9 +163,11 @@ PyMatting==1.1.12
 PyNaCl==1.5.0
 pyparsing==3.1.2
 pyproject_hooks==1.1.0
+pystoi==0.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+python-utils==3.8.2
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -144,6 +175,7 @@ referencing==0.35.1
 regex==2024.7.24
 rembg==2.0.58
 requests==2.32.3
+retrying==1.3.4
 rich==13.7.1
 rpds-py==0.20.0
 ruff==0.6.1
@@ -152,13 +184,23 @@ scikit-image==0.24.0
 scikit-learn==1.5.1
 scipy==1.13.1
 semantic-version==2.10.0
+sentencepiece==0.2.0
 shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.4
 sniffio==1.3.1
+soundfile==0.12.1
 soupsieve==2.6
+soxr==0.5.0
+spacy==3.7.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 stack-data==0.6.3
 starlette==0.38.2
+submitit==1.5.1
 sympy==1.12
+thinc==8.2.5
 threadpoolctl==3.5.0
 tifffile==2024.8.10
 tinycss2==1.3.0
@@ -167,12 +209,16 @@ tomli==2.0.1
 tomlkit==0.12.0
 torch==2.1.0
 torchaudio==2.1.0
+torchdata==0.7.0
 torchmcubes @ git+https://github.com/tatsy/torchmcubes.git@cb81cddece46a8a126b08f7fbb9742f8605eefab
+torchmetrics==1.4.1
+torchtext==0.16.0
 torchvision==0.16.0
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
 transformers==4.44.0
+treetable==0.2.5
 trimesh==4.4.7
 triton==2.1.0
 typer==0.12.4
@@ -182,11 +228,14 @@ tzdata==2024.1
 uc-micro-py==1.0.3
 urllib3==2.2.2
 uvicorn==0.30.6
+wasabi==1.1.3
 wcwidth==0.2.13
+weasel==0.4.1
 webencodings==0.5.1
 websockets==11.0.3
 wrapt==1.16.0
 xatlas==0.0.9
+xformers==0.0.22.post7
 xxhash==3.5.0
 yarg==0.1.9
 yarl==1.9.4
